--- a/Assets/style/style.css
+++ b/Assets/style/style.css
@@ -1,6 +1,3 @@
-
-
-
 div #btn{
     width:5%;
     height:20px;
@@ -14,5 +11,13 @@ div #btn{
 
 #FontC p{
     font-family: 'Volkhov', serif;
+}
+
+img#test{
+    position:relative;
+    z-index: 0;
+    background-color:grey;
+    width:100%;
+    height:500px;
 }
 
