--- a/Assets/style/style.css
+++ b/Assets/style/style.css
@@ -24,4 +24,13 @@ img #test {
     width:100%;
     height:500px;
 }
+.contactUs {
+    text-align: center;
+}
+#list {
+    list-style-type: none;
+}
+.aboutUs {
+    text-align: center;
+}
 
